@@ -1,3 +1,12 @@
+2024-07-27T00:57:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10119517048 # 369
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-27
+* notice: last 14d: unq all: 1 1764
+* notice: prev accum: outdated-unq outdated-all / unq all: 2160 217588 / 2174 219389
+* notice: next accum: outdated-unq outdated-all / unq all: 2161 217717 / 2175 219518
+* notice: prev exec diff / last date diff / accum: unq all: +1 +129 -0 -37 / +1 +129 -0 -0 / 1 129
+* notice: removed / changed dates: [2024-07-12] / [2024-07-13 2024-07-26]
+
 2024-07-26T00:57:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10103848933 # 368
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-26
